# qr_method_opencl

./: .gitignore  CMakeLists.txt  main.cpp  opencl.cpp
